--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,14 +24,23 @@ steps:
 - task: NuGetCommand@2
   inputs:
     restoreSolution: '$(solution)'
-
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud_PI'
+    organization: 'clt-04359151-4e0c-49c1-abcb-1558cba54e8d'
+    scannerMode: 'MSBuild'
+    projectKey: 'clt-04359151-4e0c-49c1-abcb-1558cba54e8d_Proyecto'
+    projectName: 'Proyecto'
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
-
+- task: SonarCloudAnalyze@1
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
 - task: VSTest@2
   inputs:
     platform: '$(buildPlatform)'
