Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,14 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  inputs:
+      command: 'custom'
+      projects: '**/*.sln'
+      custom: 'reportgenerator'
+      arguments: '"-reports:$(Agent.TempDirectory)\coverage\coverage.cobertura.xml" "-targetdir:$(Agent.TempDirectory)\coverage\Reports" -tag:$(Build.BuildNumber) "-reporttypes:HTMLInline;HTMLChart;SonarQube"'
+
 - task: SonarCloudAnalyze@1
 - task: SonarCloudPublish@1
   inputs:
