--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,19 +40,42 @@ steps:
 
 
 
+# Test with Coverage
 
-
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-
+# Run all tests with "/p:CollectCoverage=true /p:CoverletOutputFormat=cobertura" to generate the code coverage file
 - task: DotNetCoreCLI@2
+  displayName: dotnet test
   inputs:
-      command: 'custom'
-      projects: '**/*.sln'
-      custom: 'reportgenerator'
-      arguments: '"-reports:$(Agent.TempDirectory)\coverage.json" "-targetdir:$(Agent.TempDirectory)\coverage\Reports" -tag:$(Build.BuildNumber) "-reporttypes:HTMLInline;HTMLChart;SonarQube"'
+    command: test
+    arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
+    projects: 'tests/\*\*/\*.csproj'
+    nobuild: true
+
+- task: reportgenerator@5
+  displayName: ReportGenerator
+  inputs:
+    reports: '$(Build.SourcesDirectory)/tests/\*\*/coverage.cobertura.xml'
+    targetdir: '$(Build.SourcesDirectory)/CodeCoverage'
+    reporttypes: 'HtmlInline\_AzurePipelines;Cobertura;Badges'
+    assemblyfilters: '-xunit\*'
+
+# Publish the code coverage result (summary and web site)
+# The summary allows to view the coverage percentage in the summary tab
+# The web site allows to view which lines are covered directly in Azure Pipeline
+- task: PublishCodeCoverageResults@1
+  displayName: 'Publish code coverage'
+  inputs:
+    codeCoverageTool: Cobertura
+    summaryFileLocation: '$(Build.SourcesDirectory)/CodeCoverage/Cobertura.xml'
+    reportDirectory: '$(Build.SourcesDirectory)/CodeCoverage'
+
+
+#- task: VSTest@2
+#  inputs:
+#    platform: '$(buildPlatform)'
+#    configuration: '$(buildConfiguration)'
+
+
 
 - task: SonarCloudAnalyze@1
 - task: SonarCloudPublish@1
