--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ steps:
 - task: reportgenerator@5
   displayName: ReportGenerator
   inputs:
-    reports: '$(Build.SourcesDirectory)/tests/\*\*/cobertura.xml'
+    reports: '$(Build.SourcesDirectory)/tests/\*\*/coverage.json'
     targetdir: '$(Build.SourcesDirectory)/CodeCoverage'
     reporttypes: 'HtmlInline\_AzurePipelines;Cobertura;Badges'
     assemblyfilters: '-xunit\*'
