--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,12 +52,9 @@ steps:
     nobuild: true
 
 - task: reportgenerator@5
-  displayName: ReportGenerator
   inputs:
-    reports: '$(Build.SourcesDirectory)/Tests/Pruebas/coverage.json'
-    targetdir: '$(Build.SourcesDirectory)/CodeCoverage'
-    reporttypes: 'HtmlInline\_AzurePipelines;Cobertura;Badges'
-    assemblyfilters: '-xunit\*'
+    reports: 'coverage.json'
+    targetdir: 'CodeCoverage'
 
 # Publish the code coverage result (summary and web site)
 # The summary allows to view the coverage percentage in the summary tab
