--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,12 +38,20 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
  
+
+ 
 - task: VSTest@2
   inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
- 
- 
+     testSelector: 'testAssemblies'
+     testAssemblyVer2: |
+       **\*xTests*.dll
+       !**\*TestAdapter.dll
+       !**\obj\**
+     searchFolder: '$(System.DefaultWorkingDirectory)'
+     resultsFolder: '$(Agent.TempDirectory)\CodeCoverage'
+     runTestsInIsolation: true
+     codeCoverageEnabled: true
+
  
 - task: SonarCloudAnalyze@1
 - task: SonarCloudPublish@1
