--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,7 +57,7 @@ steps:
 - task: SonarCloudPublish@1
   inputs:
     pollingTimeoutSec: '300'
- 
+  condition: succeededOrFailed()
  
 - task: NuGetCommand@2
   inputs:
