--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ steps:
   displayName: 'Publish code coverage'
   inputs:
     codeCoverageTool: Cobertura
-    summaryFileLocation: '$(Agent.TempDirectory)/CodeCoverage/Cobertura.xml'
+    summaryFileLocation: '$(Agent.TempDirectory)/CodeCoverage/*.trx'
     reportDirectory: '$(Agent.TempDirectory)/CodeCoverage'
   condition: succeededOrFailed()
 
